test/deployment_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-index
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: index
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: nginx
        name: index
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 90
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - nginx
                    - key: name
                      operator: In
                      values:
                        - index
                topologyKey: topology.kubernetes.io/zone
      containers:
        - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-index:v1.0
          name: nginx-index-deploy
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 50
            successThreshold: 1
            failureThreshold: 3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-menu
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: menu
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: nginx
        name: menu
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 90
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values: 
                  - nginx
                - key: name
                  operator: In
                  values:
                  - menu
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-menu:v1.0
        name: nginx-menu-deploy
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 250m
            memory: 250Mi
          requests:
            cpu: 250m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /menu.jsp
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 50
          successThreshold: 1
          failureThreshold: 3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-login
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: login
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nginx
        name: login
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 90
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values: 
                  - nginx
                - key: name
                  operator: In
                  values:
                  - login
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-login:v1.0
        name: nginx-login-deploy
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /login.jsp
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 50
          successThreshold: 1
          failureThreshold: 3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-join
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: join
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nginx
        name: join
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 90
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values: 
                  - nginx
                - key: name
                  operator: In
                  values:
                  - join
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-join:v1.0
        name: nginx-join-deploy
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /join.jsp
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 50
          successThreshold: 1
          failureThreshold: 3


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-mypage
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: mypage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nginx
        name: mypage
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 90
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values: 
                  - nginx
                - key: name
                  operator: In
                  values:
                  - mypage
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-mypage:v1.0
        name: nginx-mypage-deploy
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /mypage.jsp
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 50
          successThreshold: 1
          failureThreshold: 3
